tests/snapshots/examples_fixtures/aoc__2025__aoc_day7_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day7_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day7_part1.flx:44:14
   |
44 |     to_array(map(range(0, width), /_ -> 0))
   |              ^^^

Hint:
  Define it first: let map = ...;
== stdout ==
<not executed>
